--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.scss">
-    <title>ITCON</title>
+    <link rel="stylesheet" href="css/style.min.css">
+    <title>ITCon</title>
 </head>
 <body>
 
     <header>
-        <div class="logo_container">
-            <div class="logo">
-                <img src="assets/logo.png" alt="Логотип">
-            </div>
+        <div class="header_container">
+            <img class="logo" src="assets/logo.png" alt="Логотип">
             <nav class="header">
                 <a href="#about-us">О нас</a>
                 <a href="#advantages">Преимущества</a>
