contacts&footer left

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
     </div>
 
-    <div name="about-us" class="about-us">
+    <div id="about-us" class="about-us">
         <div class="about-us_container">
-            <div class="abut-us_info">
+            <div class="about-us_info">
                 <h2 class="about-us_info_header">О нас</h2>
                 <div class="about-us_info_content">
                     <p>Компания itCon создана в 2022 году для решения задач по подбору высококвалифицированных программистов и It-консалтинга учредителями компаний Codeinspiration.pro, ООО «БайПро» (www.bypro.by ). В г. Смоленске создан филиал для удобства работы с российскими заказчиками ООО «РоСа».</p>
@@ -42,106 +42,115 @@
             <div class="about-us_partners">
                 <h2 class="about-us_partners_header">Нашим сотрудникам доверяют</h2>
                 <div class="about-us_partners_content">
-                    <div class="partner_logo"></div>
-                    <div class="partner_logo"></div>
-                    <div class="partner_logo"></div>
-                    <div class="partner_logo"></div>
-                    <div class="partner_logo"></div>
-                    <div class="partner_logo"></div>
+                    <img src="assets/partner_coca.jpg" alt="">
+                    <img src="assets/partner_orto.jpg" alt="">
+                    <img src="assets/partner_swiss.jpg" alt="">
+                    <img src="assets/partner_sluck.jpg" alt="">
+                    <img src="assets/partner_dzerzh.jpg" alt="">
+                    <img src="assets/partner_slav.jpg" alt="">
                 </div>
             </div>
         </div>
     </div>
 
-    <div name="advantages" class="advantages">
+    <div id="advantages" class="advantages">
         <div class="advantages_container">
-            <div class="advantage">
-                <div class="advantage_icon"></div>
-                <p class="advantage_content">Экономия времени на поиск сотрудников</p>
-            </div>
-            <div class="advantage">
-                <div class="advantage_icon"></div>
-                <p class="advantage_content">Высококвалифицированные сотрудники из Парка Высоких Технологий</p>
-            </div>
-            <div class="advantage">
-                <div class="advantage_icon"></div>
-                <p class="advantage_content">Обеспечение дефицитными специалистами</p>
-            </div>
-            <div class="advantage">
-                <div class="advantage_icon"></div>
-                <p class="advantage_content">Компания из Беларуси с открытой дочерней компанией в Смоленске</p>
-            </div>
-            <div class="advantage">
-                <div class="advantage_icon"></div>
-                <p class="advantage_content">Не привязаны к определенной локации и эффективно работаем онлайн</p>
-            </div>
-            <div class="advantage">
-                <div class="advantage_icon"></div>
-                <p class="advantage_content">Решение проблем с подбором сотрудников</p>
+            <h2 class="advantages_header">Преимущества</h2>
+            <div class="advantages_content">
+                <div class="advantage">
+                    <img src="assets/advantage_1.png" alt="Картинка">
+                    <p class="advantage_content">Экономия времени на <br> поиск сотрудников</p>
+                </div>
+                <div class="advantage">
+                    <img src="assets/advantage_2.png" alt="Картинка">
+                    <p class="advantage_content">Высококвалифицированные сотрудники из Парка Высоких Технологий</p>
+                </div>
+                <div class="advantage">
+                    <img src="assets/advantage_3.png" alt="Картинка">
+                    <p class="advantage_content">Обеспечение дефицитными специалистами</p>
+                </div>
+                <div class="advantage">
+                    <img src="assets/advantage_4.png" alt="Картинка">
+                    <p class="advantage_content">Компания из Беларуси с открытой дочерней компанией в Смоленске</p>
+                </div>
+                <div class="advantage">
+                    <img src="assets/advantage_5.png" alt="Картинка">
+                    <p class="advantage_content">Не привязаны к определенной локации и эффективно работаем онлайн</p>
+                </div>
+                <div class="advantage">
+                    <img src="assets/advantage_6.png" alt="Картинка">
+                    <p class="advantage_content">Решение проблем с подбором сотрудников</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div name="guarantees" class="guarantees">
+    <div id="guarantees" class="guarantees">
         <div class="guarantees_container">
             <h2 class="guarantees_header">Наши гарантии</h2>
-            <div class="guarantee">
-                <div class="guarantee_icon"><img src="assets/guarantee_1.png" alt="Картинка"></div>
-                <div class="guarantee_content">Быстро подбираем нужных вам сотрудников</div>
-            </div>
-            <div class="guarantee">
-                <div class="guarantee_icon"><img src="assets/guarantee_2.png" alt="Картинка"></div>
-                <div class="guarantee_content">Предоставляем специалистов с опытом решения необходимых вам задач</div>
-            </div>
-            <div class="guarantee">
-                <div class="guarantee_icon"><img src="assets/guarantee_3.png" alt="Картинка"></div>
-                <div class="guarantee_content">Работаем со всем рынком</div>
+            <div class="guarnees_content">
+                <div class="guarantee">
+                    <img class="guarantee_icon" src="assets/guarantee_1.png" alt="Картинка">
+                    <p class="guarantee_content">Быстро подбираем нужных вам сотрудников</p>
+                </div>
+                <div class="guarantee">
+                    <img class="guarantee_icon" src="assets/guarantee_2.png" alt="Картинка">
+                    <p class="guarantee_content">Предоставляем специалистов с опытом решения необходимых вам задач</p>
+                </div>
+                <div class="guarantee">
+                    <img class="guarantee_icon" src="assets/guarantee_3.png" alt="Картинка">
+                    <p class="guarantee_content">Работаем со всем рынком</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <div name="specialists" class="specialists">
+    <div id="specialists" class="specialists">
         <div class="specialists_container">
             <h2 class="specialists_header">Опыт наших специалистов</h2>
-            <ul class="specialists_left-column">
-                <li>Разработка социальных приложений</li>
-                <li>Проекты по отправке и обработке сообщений</li>
-                <li>Gambling</li>
-                <li>Интернет-коммерция</li>
-                <li>Разработка мобильных приложений (social, dating)</li>
-                <li>Обработка финансовых операций</li>
-            </ul>
-            <ul class="specialists_right-column">
-                <li>Работа с ботами в telegram</li>
-                <li>Интеграция с CRM (amo, bitrix24)</li>
-                <li>Интеграция с платежными системами</li>
-                <li>Интеграция с различными API</li>
-                <li>Разработка API</li>
-            </ul>
+            <div class="specialists_columns">
+                <ul class="specialists_column">
+                    <li>Разработка социальных приложений</li>
+                    <li>Проекты по отправке и обработке сообщений</li>
+                    <li>Gambling</li>
+                    <li>Интернет-коммерция</li>
+                    <li>Разработка мобильных приложений (social, dating)</li>
+                    <li>Обработка финансовых операций</li>
+                </ul>
+                <ul class="specialists_column">
+                    <li>Работа с ботами в telegram</li>
+                    <li>Интеграция с CRM (amo, bitrix24)</li>
+                    <li>Интеграция с платежными системами</li>
+                    <li>Интеграция с различными API</li>
+                    <li>Разработка API</li>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <div name="contacts" class="contacts">
+    <div id="contacts" class="contacts">
         <div class="contacts_container">
             <h2 class="contacts_header">Контакты</h2>
-            <div class="contacts_adress">
-                <h4 class="contacts_adress_header">Адрес:</h4>
-                <p class="contacts_adress_content">Российская Федерация, 214006, г. Смоленск, ул. Чкалова, д.6А, офис Р 48.</p>
-            </div>
-            <div class="contacts_phone">
-                <h4 class="contacts_phone_header">Телефон:</h4>
-                <a href="" class="contacts_phone_content">+7 927 557-98-64</a>
-            </div>
-            <div class="contacts_mail">
-                <h4 class="contacts_mail_header">Почта:</h4>
-                <a href="" class="contacts_mail_content">saenko.ns@yandex.by</a>
-            </div>
-            <div class="contacts_social">
-                <h4 class="contacts_social_header">Наши соц.сети:</h4>
-                <div class="contacts_social_content">
-                    <img src="assets/social_wa.png" alt="WhatsApp">
-                    <img src="assets/social_tg.png" alt="Telegram">
-                    <img src="assets/social_vb.png" alt="Viber">
+            <div class="contacts_content">
+                <div class="contact">
+                    <h4 class="contact_header">Адрес:</h4>
+                    <p class="contact_content">Российская Федерация, 214006, г. Смоленск, ул. Чкалова, д.6А, офис Р 48.</p>
+                </div>
+                <div class="contact">
+                    <h4 class="contact_header">Телефон:</h4>
+                    <a href="" class="contact_content">+7 927 557-98-64</a>
+                </div>
+                <div class="contact">
+                    <h4 class="contact_header">Почта:</h4>
+                    <a href="" class="contact_content">saenko.ns@yandex.by</a>
+                </div>
+                <div class="contact">
+                    <h4 class="contact_header">Наши соц.сети:</h4>
+                    <div class="contact_content">
+                        <a href=""><img src="assets/social_wa.png" alt="WhatsApp"></a>
+                        <a href=""><img src="assets/social_tg.png" alt="Telegram"></a>
+                        <a href=""><img src="assets/social_vb.png" alt="Viber"></a>
+                    </div>
                 </div>
             </div>
         </div>
