--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="contacts_content">
                 <div class="contact">
                     <h4 class="contact_header">Адрес:</h4>
-                    <p class="contact_content">Российская Федерация, 214006, г. Смоленск, ул. Чкалова, д.6А, офис Р 48.</p>
+                    <p class="contact_content">Российская Федерация, 214006, г. Смоленск,<br> ул. Чкалова, д.6А, офис Р 48.</p>
                 </div>
                 <div class="contact">
                     <h4 class="contact_header">Телефон:</h4>
